--- a/sn.html
+++ b/sn.html
@@ -10,3 +10,16 @@
     </div>
 </body>
 </html>
+<script>
+    // Function to fetch Graft Service Nodes status
+    async function fetchNodesStatus() {
+        try {
+            const response = await fetch('https://api.example.com/graft-nodes-status');
+            const data = await response.json();
+            return data; // Assuming the API returns a JSON array of nodes with status information
+        } catch (error) {
+            console.error('Error fetching nodes status:', error);
+            return [];
+        }
+    }
+</script>
